[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "fusion"
description = "fusion tools, plugins and utilities for Jupyter notebooks in the HuBMAP workspace."
dynamic = ["version"]
dependencies = [    
    "requests",
    "pandas", 
    "girder-client"]
requires-python = ">=3.9"
authors = [
  {name = "Srisharanya Injarapu", email = "injarapu.s@ufl.edu"},
]
readme = "README.md"

[project.optional-dependencies]  # â† This section was missing!
jupyter = [
    "large-image[all]",
    "jupyter-server-proxy",
    "ipyleaflet>=0.19",
]
